--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
         "allowSyntheticDefaultImports": true,
         "forceConsistentCasingInFileNames": true
     },
-    "include": ["bin", "src"]
+    "include": ["bin", "lib", "src"]
 }
