--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "main": "./bin/app.ts",
     "files": [
         "bin/",
+        "lib/",
         "src/"
     ],
     "engines": {
@@ -33,12 +34,14 @@
         "prettier:fix": "prettier --write '**/*.{mjs,js,ts}' --list-different"
     },
     "devDependencies": {
+        "@types/lodash": "^4.17.16",
         "@typescript-eslint/eslint-plugin": "^8.26.1",
         "@typescript-eslint/parser": "^8.26.1",
         "eslint": "^8.42.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
+        "lodash": "^4.17.21",
         "prettier": "^3.0.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
